...
                                fontFamily = NunitoFamily,
                                fontWeight = FontWeight.SemiBold,
                                fontSize = 15.sp,
                                textDecoration = TextDecoration.Underline,
                            ),
                        ) {
                            append("zaloguj się")
                        }
                    },
                modifier =
                    Modifier
                        .fillMaxWidth()
                        .clickable { onSignInWithEmail() }
...
